--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,12 @@ env.bak/
 venv.bak/
 
 # VS Code
-.vscode/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
