--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "footsteps.highlightColorMaxOpacity": 0.2
+    "footsteps.highlightColorMaxOpacity": 0.2,
+    "python.pythonPath": "c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
